# gd_sfx

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  clippy.toml  credits.json  lang_schema.json
.cargo/: config.toml
.github/workflows/: check.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: i18n.rs  main.rs  theme.rs
crates/app/src/backend/: mod.rs  search.rs  settings.rs
crates/app/src/layout/: debug_window.rs  left_window.rs  mod.rs  right_window.rs  tabs_panel.rs
crates/app/src/tabs/: credits.rs  favorites.rs  library.rs  mod.rs  tools.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/files/: Cargo.toml
crates/files/src/: build.rs  consts.rs  lib.rs  paths.rs
crates/gdsfx/: Cargo.toml
crates/gdsfx-app/: Cargo.toml
crates/gdsfx-app/src/: i18n.rs  images.rs  lib.rs  main.rs  theme.rs
crates/gdsfx-app/src/backend/: favorites.rs  mod.rs  search.rs  settings.rs  tools.rs
crates/gdsfx-app/src/layout/: debug_window.rs  left_window.rs  mod.rs  right_window.rs  tabs_panel.rs
crates/gdsfx-app/src/tabs/: credits.rs  favorites.rs  library.rs  mod.rs  settings.rs  stats.rs  tools.rs
crates/gdsfx-audio/: Cargo.toml
crates/gdsfx-audio/src/: lib.rs
crates/gdsfx-build/: Cargo.toml
crates/gdsfx-build/src/: lib.rs
crates/gdsfx-files/: Cargo.toml
crates/gdsfx-files/src/: encoding.rs  lib.rs
crates/gdsfx-library/: Cargo.toml
crates/gdsfx-library/src/: files.rs  lib.rs  music.rs  parse.rs  requests.rs  sfx.rs
crates/gdsfx-shared/: Cargo.toml
crates/gdsfx-shared/src/: consts.rs  lib.rs  paths.rs
crates/gdsfx/src/: images.rs  main.rs  theme.rs
crates/gdsfx/src/backend/: favorites.rs  search.rs  tools.rs
crates/gdsfx/src/layout/: debug_window.rs  mod.rs  right_window.rs
crates/gdsfx/src/tabs/: credits.rs  stats.rs  tools.rs
credits/: links.json  themes.json
gdsfx-app/: Cargo.toml
gdsfx-app/src/: app_state.rs  gdsfx.rs  i18n.rs  icon.rs  images.rs  lib.rs  library_manager.rs  main.rs  settings.rs  sorting.rs  theme.rs
gdsfx-app/src/app_state/: favorites.rs  mod.rs  search.rs  settings.rs
gdsfx-app/src/backend/: favorites.rs  konami.rs  mod.rs  search.rs  settings.rs  tools.rs
gdsfx-app/src/layout/: debug_window.rs  left_window.rs  mod.rs  right_window.rs  tabs_panel.rs  top_panel.rs
gdsfx-app/src/layout/left_window/: credits.rs  favorites.rs  library.rs  mod.rs  settings.rs  stats.rs  tools.rs
gdsfx-app/src/library_manager/: mod.rs  sorting.rs
gdsfx-app/src/tabs/: credits.rs  favorites.rs  library.rs  mod.rs  settings.rs  stats.rs  tools.rs
gdsfx-audio/: Cargo.toml  build.rs
gdsfx-audio/src/: lib.rs
gdsfx-build/: Cargo.toml
gdsfx-build/src/: lib.rs
gdsfx-data/: Cargo.toml
gdsfx-data/src/: encoding.rs  lib.rs
gdsfx-data/src/paths/: mod.rs  runtime.rs
gdsfx-files/: Cargo.toml  build.rs
gdsfx-files/src/: build.rs  encoding.rs  lib.rs  paths.rs
gdsfx-files/src/paths/: build.rs  runtime.rs
gdsfx-library/: Cargo.toml
gdsfx-library/src/: credits.rs  files.rs  lib.rs  music.rs  parse.rs  requests.rs  sfx.rs  stats.rs
lang/: de_AT.json  en_GB.json  en_US.json  it_IT.json  lld_BAD.json  nl_NL.json  pl_PL.json  ru_RU.json  rue_UA.json  tok_MP.json  ua_UA.json  ua_UA_Latn.json  ua_UA_latin.json
locales/: ar_EG.json  de_AT.json  en_GB.json  en_US.json  fr_FR.json  it_IT.json  lld_BAD.json  nl_NL.json  pl_PL.json  ru_RU.json  rue_UA.json  tok_MP.json  ua_UA.json  ua_UA_Latn.json
src/: audio.rs  encoding.rs  favourites.rs  gui.rs  library.rs  main.rs  requests.rs  settings.rs  stats.rs  test.rs  tools.rs  util.rs
src/credits/: gui.rs  mod.rs
src/favorites/: gui.rs  mod.rs
src/gui/: left_window.rs  mod.rs  right_window.rs  top_panel.rs
src/gui/left_window/: credits_tab.rs  favourites_tab.rs  library_tab.rs  mod.rs  settings_tab.rs  stats_tab.rs  tools_tab.rs
src/settings/: gui.rs  mod.rs
src/stats/: gui.rs  mod.rs
src/tools/: gui.rs  mod.rs
src/util/: encoding.rs  mod.rs  requests.rs
