[package]
name = "gdsfx"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "gdsfx-app",
    "gdsfx-audio",
    "gdsfx-build",
    "gdsfx-files",
    "gdsfx-library",
]
resolver = "2"

[workspace.dependencies]
# Workspace crates
gdsfx-app = { path = "gdsfx-app" }
gdsfx-audio = { path = "gdsfx-audio" }
gdsfx-build = { path = "gdsfx-build" }
gdsfx-files = { path = "gdsfx-files" }
gdsfx-library = { path = "gdsfx-library" }

# Utilities
ahash = "0.8.11"
anyhow = "1.0.95"
build_script = "0.2.0"
educe = "0.6.0"
include_dir = "0.7.4"
itertools = "0.14.0"
once_cell = "1.20.2"
parking_lot = "0.12.3"
pretty-bytes = "0.2.2"
quote = "1.0.37"
rayon = "1.10.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
strum = { version = "0.27.1", features = ["derive"] }
pretty-duration = "0.1.1"
urlencoding = "2.1.3"

[dependencies]
gdsfx-app = { workspace = true }

winapi = { version = "0.3.9", features = ["wincon"] }

[build-dependencies]
build_script = { workspace = true }
gdsfx-files = { workspace = true }

[profile.release]
opt-level = 'z'
lto = true
strip = "symbols"
