[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
ahash = "0.8.11"
anyhow = "1.0.95"
build_script = "0.2.0"
educe = "0.6.0"
itertools = "0.14.0"
parking_lot = "0.12.3"
pretty-bytes = "0.2.2"
phf = { version = "0.11.3", features = ["macros"] }
quote = "1.0.37"
rayon = "1.10.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
strum = { version = "0.27.1", features = ["derive"] }
pretty-duration = "0.1.1"
urlencoding = "2.1.3"

[workspace.lints.clippy] # See clippy.toml
disallowed_types = "warn"

[profile.release]
opt-level = 'z'
lto = true
strip = "symbols"
