[package]
name = "gdsfx-app"
description = "Runs the application backend and renders the UI."
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdsfx-audio = { workspace = true }
gdsfx-build = { workspace = true }
gdsfx-files = { workspace = true }
gdsfx-library = { workspace = true }

ahash = { workspace = true }
anyhow = { workspace = true }
educe = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
pretty-bytes = { workspace = true }
pretty-duration = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }

eframe = "0.25.0"
egui-modal = "0.3.2"
egui_extras = { version = "0.25.0", features = ["image","svg"] }
rfd = "0.13.0"
rust-i18n = "3.0.0"

[build-dependencies]
gdsfx-build = { workspace = true }
gdsfx-files = { workspace = true }

ahash = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

image = { version = "0.24.8", default_features = false, features = ["png"] }
quote = "1.0.35"
