[package]
name = "gdsfx-app"
description = "Runs the application backend and renders the UI."
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdsfx-audio = { workspace = true }
gdsfx-build = { workspace = true }
gdsfx-files = { workspace = true }
gdsfx-library = { workspace = true }

ahash = { workspace = true }
anyhow = { workspace = true }
educe = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
pretty-bytes = { workspace = true }
pretty-duration = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }

eframe = { version = "0.31.0", features = ["serde"] }
egui_extras = { version = "0.31.0", features = ["image","svg"] }
egui_infinite_scroll = "0.7.0"
memory-stats = "1.2.0"
open = "5.3.1"
profiling = { version = "1.0.16", features = ["profile-with-puffin"] }
rfd = "0.15.1"
rust-i18n = "3.1.2"

[build-dependencies]
gdsfx-build = { workspace = true }
gdsfx-files = { workspace = true }

ahash = { workspace = true }
anyhow = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

image = { version = "0.25.5", default_features = false, features = ["png"] }
