[package]
name = "gdsfx-audio"
description = "Handles audio manipulation and output for GDSFX."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
educe = { workspace = true }
parking_lot = { workspace = true }

libfmod = "2.206.4"

[build-dependencies]
gdsfx-build = { workspace = true }
gdsfx-files = { workspace = true }
