[package]
name = "gdsfx-build"
description = "Utilities for GDSFX build scripts."
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
build_script = { workspace = true }
gdsfx-files = { path = "../gdsfx-files" }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
