[package]
name = "gdsfx-build"
description = "Utilities for GDSFX build scripts."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdsfx-files = { workspace = true }

anyhow = { workspace = true }

build_script = "0.2.0"
prettyplease = "0.2.16"
proc-macro2 = "1.0.78"
syn = "2.0.48"
