[package]
name = "gdsfx-build"
description = "Utilities for GDSFX build scripts."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdsfx-files = { workspace = true }

anyhow = { workspace = true }

prettyplease = "0.2.25"
proc-macro2 = "1.0.92"
syn = "2.0.91"
