[package]
name = "gdsfx-files"
description = "Manages files and directories needed to build and run GDSFX."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

base64 = "0.22.1"
directories = "5.0.1"
flate2 = "1.0.35"
