[package]
name = "gdsfx-library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
gdsfx-data = { path = "../gdsfx-data" }
id_tree = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
