[package]
name = "app"
description = "Main application."
version = "0.0.0"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio = { path = "../audio" }
files = { path = "../files" }
library = { path = "../library" }

ahash = { workspace = true }
anyhow = { workspace = true }
educe = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
pretty-bytes = { workspace = true }
pretty-duration = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }

eframe = { version = "0.31.0", features = ["serde"] }
egui_extras = { version = "0.31.0", features = ["image","svg"] }
egui_infinite_scroll = "0.7.0"
memory-stats = "1.2.0"
open = "5.3.1"
profiling = { version = "1.0.16", features = ["profile-with-puffin"] }
rfd = "0.15.1"
rust-i18n = "3.1.2"
winapi = { version = "0.3.9", features = ["wincon"] }

[build-dependencies]
files = { path = "../files" }

ahash = { workspace = true }
anyhow = { workspace = true }
build_script = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

image = { version = "0.25.5", default-features = false, features = ["png"] }
