[package]
name = "gdsfx"
description = "Main application."
version = "0.0.0"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio = { path = "../audio" }
files = { path = "../files" }
build = { path = "../build" }
library = { path = "../library" }

ahash = { workspace = true }
anyhow = { workspace = true }
educe = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
pretty-bytes = { workspace = true }
pretty-duration = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }

eframe = { version = "0.30.0", features = ["serde"] }
profiling = { version = "1.0.16", features = ["profile-with-puffin"] }
egui-modal = "0.6.0"
egui_extras = { version = "0.30.0", features = ["image","svg"] }
memory-stats = "1.2.0"
rfd = "0.15.1"
rust-i18n = "3.1.2"
winapi = { version = "0.3.9", features = ["wincon"] }

[build-dependencies]
build = { path = "../build" }
files = { path = "../files" }

ahash = { workspace = true }
anyhow = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

image = { version = "0.25.5", default-features = false, features = ["png"] }
